--- a/order-summary-component-main/css/style.css
+++ b/order-summary-component-main/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --pale-blue: hsl(225, 100%, 94%);
   --bright-blue: hsl(245, 75%, 52%);
+  --light-bright-blue: hsla(245, 75%, 52%, 0.8);
   --very-pale-blue: hsl(225, 100%, 98%);
   --desaturated-blue: hsl(224, 23%, 55%);
   --dark-blue: hsl(223, 47%, 23%);
@@ -19,14 +20,16 @@ html {
 }
 
 body {
+  min-height: 100vh;
   background-color: var(--pale-blue);
   background-image: url("../images/pattern-background-mobile.svg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 50%;
+  background-position: top;
+  background-attachment: fixed;
 }
 
 main {
-  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -108,7 +111,7 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 10px;
 }
 
 .order-action button {
@@ -118,6 +121,8 @@ main {
   border: none;
   border-radius: 0.5rem;
   font-size: 0.9rem;
+  cursor: pointer;
+  transition: 0.4s;
 }
 
 .order-action button:first-child {
@@ -125,8 +130,16 @@ main {
   color: white;
 }
 
+.order-action button:first-child:hover {
+  background-color: var(--light-bright-blue);
+}
+
 .order-action button:last-child {
   background-color: white;
+}
+
+.order-action button:last-child:hover {
+  background-color: var(--very-pale-blue);
 }
 
 @media (min-width: 768px) {
