--- a/results-summary-component-main/css/style.css
+++ b/results-summary-component-main/css/style.css
@@ -49,7 +49,7 @@ body p {
 main {
   min-height: 100vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: start;
 }
 
