--- a/nft-preview-card-component-main/css/style.css
+++ b/nft-preview-card-component-main/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --blue-500: hsl(215, 51%, 70%);
   --cyan-400: hsl(178, 100%, 50%);
+  --cyan-400-transparent: hsla(178, 100%, 50%, 0.5);
   /* Main background */
   --blue-950: hsl(217, 54%, 11%);
   /* Card Background */
@@ -46,7 +47,7 @@ a {
 }
 
 a:hover {
-  color: var(--cyan-400)
+  color: var(--cyan-400);
 }
 
 .nft__card {
@@ -59,6 +60,31 @@ a:hover {
   justify-content: space-around;
   align-items: center;
   gap: 2em;
+}
+
+.nft__card figure {
+  position: relative;
+}
+
+.nft__card figure div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: var(--cyan-400-transparent);
+  border-radius: 0.5em;
+  display: none;
+  cursor: pointer;
+}
+
+.nft__card figure div img {
+  display: block;
+  width: 3rem;
+}
+.nft__card figure:hover div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nft__card figure img {
@@ -144,12 +170,8 @@ a:hover {
   font-weight: 400;
 }
 
-/* .nft__creator__details p a {
+.attribution {
+  margin: 2em;
   color: var(--white);
-  font-weight: 400;
-  text-decoration: none;
-} */
-
-/* .nft__creator__details p a:hover {
-  color: var(--cyan-400);
-} */
+  font-size: 0.8em;
+}
